--- a/Project1/index.html
+++ b/Project1/index.html
@@ -45,7 +45,7 @@
         <h2>Projects</h2>
 
         <div class="card">
-            <h3>Approval Workflow System</h3>
+            <h3>Approval Workflow System.</h3>
             <p>Built a role-based approval system with audit tracking and improved load performance.</p>
         </div>
 
