--- a/Project1/index.html
+++ b/Project1/index.html
@@ -8,6 +8,7 @@
     <link href="https://fonts.googleapis.com/css2?family=Cormorant:wght@400;600;700&family=Libre+Caslon+Text:wght@400;700&display=swap" rel="stylesheet">
 
     <link rel="stylesheet" href="index.css">
+    <link rel="icon" href="AV.svg" type="image/x-icon">
 </head>
 
 <body>
@@ -18,8 +19,8 @@
 
         <nav id="homeNav" class="navbar">
             <ul>
-                <li><a href="#home">Home</a></li>
-                <li><a href="#courses">Courses</a></li>
+                <li><a href="index.html">Home</a></li>
+                <li><a href="courses.html">Courses</a></li>
             </ul>
         </nav>
     </header>
